--- a/index.html
+++ b/index.html
@@ -169,55 +169,6 @@
             </div>
         </div>
     </section>
-    <div class="associated">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="flex_box Shows">
-                        <div class="flex_cont"><a href="shows.html">
-                                <h3>Shows
-                                </h3>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="flex_box Exhi">
-                        <div class="flex_cont">
-                            <a href="exhibitions.html">
-                                <h3>Exhibitions</h3>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="flex_box Hotel">
-                        <div class="flex_cont"><a href="hotel.html">
-                                <h3>Hotels</h3>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="flex_box Sport">
-                        <div class="flex_cont">
-                            <a href="sport.html">
-                                <h3>Sports</h3>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="flex_box Tour">
-                        <div class="flex_cont"><a href="tour.html">
-                                <h3>Tours</h3>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- associated section end -->
     <!-- events section start -->
     <div class="events">
@@ -504,7 +455,8 @@
             $(".promotions-carousel").slick({
                 slidesToShow: 3,
                 slidesToScroll: 1,
-                arrows: true,
+                arrows: false,
+                dots:true,
                 responsive: [
                     {
                         breakpoint: 767,
