--- a/index.html
+++ b/index.html
@@ -456,7 +456,9 @@
                 slidesToShow: 3,
                 slidesToScroll: 1,
                 arrows: false,
-                dots:true,
+                dots: true,
+                autoplay: true, 
+                autoplaySpeed: 1000,
                 responsive: [
                     {
                         breakpoint: 767,
