--- a/index.html
+++ b/index.html
@@ -449,7 +449,8 @@
                 }
             }
             return "";
-        }</script>
+        }
+    </script>
     <script>
         $(document).ready(function () {
             $(".promotions-carousel").slick({
