--- a/exhibitions.html
+++ b/exhibitions.html
@@ -528,6 +528,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="javascript/slick.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src="javascript/custom.js"></script>
     <script>
         $(document).ready(function () {
             $(".open").click(function () {
