--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Domov</title>
+    <title>Home</title>
     <link rel="icon" type="image/x-icon" href="img/fav.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css/slick.css">
@@ -458,7 +458,7 @@
                 slidesToScroll: 1,
                 arrows: false,
                 dots: true,
-                autoplay: false,
+                autoplay: true,
                 autoplaySpeed: 1000,
                 responsive: [
                     {
