--- a/privacy.html
+++ b/privacy.html
@@ -50,7 +50,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="banner__text">
-                        <h1>Adatvédelmi irányelvek</h1>
+                        <h1>Privacy Policy</h1>
                     </div>
                 </div>
 
@@ -73,9 +73,8 @@
                     conditions. The following definitions shall have the same meaning regardless of whether
                     they appear in singular or in plural.
                 </p>
-                <p>Definitions
-                </p>
-                <p>For the purposes of this Privacy Policy:</p>
+                <h3>Definitions</h3>
+                <p><b>For the purposes of this Privacy Policy:</b></p>
                 <p>Account means a unique account created for You to access our Service or parts of our
                     Service.
                 </p>
