--- a/tour.html
+++ b/tour.html
@@ -64,7 +64,6 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="para_hotel tour_besi">
-                        <h2>Macau’s Top Tours & Attractions</h2>
                         <p>Explore Macau with our curated selection of tours designed to showcase the city’s rich
                             heritage and unique attractions. From cultural journeys and historical site visits to scenic
                             city
@@ -89,7 +88,9 @@
     <div class="thessa_detail">
         <div class="container">
             <div class="row">
-
+                <div class="col-12">
+                    <h2>Macau’s Top Tours & Attractions</h2>
+                </div>
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/paul.jfif" alt="macau"></div>
@@ -103,7 +104,8 @@
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.wh.mo/en/site/detail/18" class="button_main" target="_blank">Buy Tickets</a>
+                            <a href="https://www.wh.mo/en/site/detail/18" class="button_main" target="_blank">Buy
+                                Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -111,7 +113,8 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/viator.jpg" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.viator.com/Macau-SAR-attractions/Senate-Square-Senado-Square/d4460-a94446" target="_blank">
+                                href="https://www.viator.com/Macau-SAR-attractions/Senate-Square-Senado-Square/d4460-a94446"
+                                target="_blank">
                                 <h3>Senado Square
                                 </h3>
                                 <span>📍 Central Macau</span>
@@ -131,7 +134,8 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/klook.webp" alt="macao"></div>
                         <div class="together"> <a
-                                href="https://www.klook.com/en-US/activity/506-macau-tower-macau/?_currency=USD&campaignid=21207524104&adgroupid=158083778541&targetid=kwd-350785192067&matchtype=e&device=c&creative=697062045116&extensionid=&keyword=macau%20tower%20tickets&loc_interest_ms=9196149&loc_physical_ms=1007872&network=g&utm_content=campaignid_21207524104_adgroupid_158083778541&gad_source=1&gclid=Cj0KCQjwtsy1BhD7ARIsAHOi4xYHuX_n3I2QCDn_XqkwT_DG_l-CCWoYOf2Fjx8_d4azdSZ2_An23VoaAlaaEALw_wcB" target="_blank">
+                                href="https://www.klook.com/en-US/activity/506-macau-tower-macau/?_currency=USD&campaignid=21207524104&adgroupid=158083778541&targetid=kwd-350785192067&matchtype=e&device=c&creative=697062045116&extensionid=&keyword=macau%20tower%20tickets&loc_interest_ms=9196149&loc_physical_ms=1007872&network=g&utm_content=campaignid_21207524104_adgroupid_158083778541&gad_source=1&gclid=Cj0KCQjwtsy1BhD7ARIsAHOi4xYHuX_n3I2QCDn_XqkwT_DG_l-CCWoYOf2Fjx8_d4azdSZ2_An23VoaAlaaEALw_wcB"
+                                target="_blank">
                                 <h3>Macau Tower</h3>
                                 <span>📍 Macau Peninsula
                                 </span>
@@ -151,7 +155,8 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/temple.jpg" alt="macao"></div>
                         <div class="together"> <a
-                                href="https://www.viator.com/Macau-SAR-attractions/A-Ma-Temple-Ma-Kok-Miu/d4460-a6450" target="_blank">
+                                href="https://www.viator.com/Macau-SAR-attractions/A-Ma-Temple-Ma-Kok-Miu/d4460-a6450"
+                                target="_blank">
                                 <h3>A-Ma Temple</h3>
                                 <span>📍 Coloane</span>
                             </a>
@@ -179,7 +184,8 @@
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.museums.gov.mo/eng/museums.html" class="button_main" target="_blank">Buy Tickets</a>
+                            <a href="https://www.museums.gov.mo/eng/museums.html" class="button_main"
+                                target="_blank">Buy Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -187,7 +193,8 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/village.avif" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.macaotourism.gov.mo/en/macao-full-of-fun/tranquility-tour-in-coloane-village" target="_blank">
+                                href="https://www.macaotourism.gov.mo/en/macao-full-of-fun/tranquility-tour-in-coloane-village"
+                                target="_blank">
                                 <h3>Coloane Village</h3>
                                 <span>📍 Coloane Island</span>
                             </a>
@@ -206,7 +213,8 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/taipavillage.jpg" alt="macau"></div>
-                        <div class="together"> <a href="https://www.china-roads.com/travel/macao/village-taipa/" target="_blank">
+                        <div class="together"> <a href="https://www.china-roads.com/travel/macao/village-taipa/"
+                                target="_blank">
                                 <h3>Taipa Village
                                 </h3>
                                 <span>📍 Taipa Island
@@ -219,7 +227,8 @@
 
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.china-roads.com/travel/macao/village-taipa/" class="button_main" target="_blank">Buy
+                            <a href="https://www.china-roads.com/travel/macao/village-taipa/" class="button_main"
+                                target="_blank">Buy
                                 Tickets</a>
                         </div>
                     </div>
@@ -228,7 +237,8 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/panda.avif" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.macaotourism.gov.mo/en/shows-and-entertainment/family-fun/macao-giant-panda-pavilion" target="_blank">
+                                href="https://www.macaotourism.gov.mo/en/shows-and-entertainment/family-fun/macao-giant-panda-pavilion"
+                                target="_blank">
                                 <h3>Macau Giant Panda Pavilion
                                 </h3>
                                 <span>📍 Coloane Island</span>
