--- a/privacy.html
+++ b/privacy.html
@@ -61,6 +61,7 @@
     <section class="privacy-policy">
         <div class="container">
             <div class="content-wrap">
+                <h3>Privacy Policy</h3>
                 <p>This Privacy Policy describes Our policies and procedures on the collection, use and
                     disclosure of Your information when You use the Service and tells You about Your privacy
                     rights and how the law protects You.
