--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
             var cookieAlert = document.querySelector(".cookie-alert");
             var acceptCookies = document.querySelector(".accept-cookies");
 
-            cookieAlert.offsetHeight; // Force browser to trigger reflow (https://stackoverflow.com/a/39451131)
+            cookieAlert.offsetHeight;
 
             if (!getCookie("acceptCookies")) {
                 cookieAlert.classList.add("show");
@@ -427,7 +427,6 @@
             });
         })();
 
-        // Cookie functions stolen from w3schools
         function setCookie(cname, cvalue, exdays) {
             var d = new Date();
             d.setTime(d.getTime() + (exdays * 24 * 60 * 60 * 1000));
