--- a/sport.html
+++ b/sport.html
@@ -234,7 +234,7 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="img/carsport.jpg" alt="macau"></div>
                         <div class="together"> <a
-                                href="https://www.wynnresortsmacau.com/en/wynn-signature/2024-hypercar-exhibition"
+                                href="https://www.asiantour.com/tournament/SJ24/2024"
                                 target="_blank">
                                 <h3>SJM Macao Open</h3>
                                 <span>📍 Macau Golf and Country Club
@@ -249,7 +249,7 @@
 
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.wynnresortsmacau.com/en/wynn-signature/2024-hypercar-exhibition"
+                            <a href="https://www.asiantour.com/tournament/SJ24/2024"
                                 class="button_main" target="_blank">Buy
                                 Tickets</a>
                         </div>
