--- a/index.html
+++ b/index.html
@@ -391,6 +391,19 @@
     </footer>
     <!-- footer end-->
     <!-- cookies start -->
+    <div class="card cookie-alert show">
+        <div class="card-body p-5">
+
+            <p class="card-text"> We use cookies to enhance your browsing experience and provide personalized content.
+                By
+                continuing to browse the site, you agree to our use of cookies. For more information, please
+                read our Privacy Policy.</p>
+            <div class="btn-toolbar justify-content-end">
+                <a href="#" class="btn btn-primary accept-cookies">Accept Cookies</a>
+                <a href="#" class="btn btn-primary reject-cookies">Reject Cookies</a>
+            </div>
+        </div>
+    </div>
     <div class="wrapper show">
         <div class="info">
             <p>
