--- a/index.html
+++ b/index.html
@@ -398,23 +398,10 @@
                 By
                 continuing to browse the site, you agree to our use of cookies. For more information, please
                 read our Privacy Policy.</p>
-            <div class="btn-toolbar justify-content-end">
+            <div class="btn-toolbar justify-content-end g-3">
                 <a href="#" class="btn btn-primary accept-cookies">Accept Cookies</a>
                 <a href="#" class="btn btn-primary reject-cookies">Reject Cookies</a>
             </div>
-        </div>
-    </div>
-    <div class="wrapper show">
-        <div class="info">
-            <p>
-                We use cookies to enhance your browsing experience and provide personalized content. By
-                continuing to browse the site, you agree to our use of cookies. For more information, please
-                read our Privacy Policy.
-            </p>
-        </div>
-        <div class="buttons">
-            <button class="button" id="acceptBtn">Accept Cookies</button>
-            <button class="button">Reject Cookies</button>
         </div>
     </div>
     <!-- cookies end -->
