--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                 By
                 continuing to browse the site, you agree to our use of cookies. For more information, please
                 read our Privacy Policy.</p>
-            <div class="btn-toolbar justify-content-end g-3">
+            <div class="btn-toolbar justify-content-end">
                 <a href="#" class="btn btn-primary accept-cookies">Accept Cookies</a>
                 <a href="#" class="btn btn-primary reject-cookies">Reject Cookies</a>
             </div>
