--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="columns large-4">
                     <div class="product-wrap">
                         <div class="product-img">
-                            <img src="img/show.jpg" alt="">
+                            <a href="shows.html"><img src="img/show.jpg" alt=""></a>
                         </div>
                         <div class="product-txt">
                             <div class="product-name">
@@ -113,7 +113,7 @@
                 <div class="columns large-4">
                     <div class="product-wrap">
                         <div class="product-img">
-                            <img src="img/exhibition.jpg" alt="">
+                            <a href="exhibitions.html"><img src="img/exhibition.jpg" alt=""></a>
                         </div>
                         <div class="product-txt">
                             <div class="product-name">
@@ -127,7 +127,7 @@
                 <div class="columns large-4">
                     <div class="product-wrap">
                         <div class="product-img">
-                            <img src="img/hotelbaneer.jpg" alt="">
+                           <a href="hotel.html"><img src="img/hotelbaneer.jpg" alt=""></a> 
                         </div>
                         <div class="product-txt">
                             <div class="product-name">
@@ -141,7 +141,7 @@
                 <div class="columns large-4">
                     <div class="product-wrap">
                         <div class="product-img">
-                            <img src="img/sports.jpg" alt="">
+                            <a href="sport.html"><img src="img/sports.jpg" alt=""></a>
                         </div>
                         <div class="product-txt">
                             <div class="product-name">
@@ -155,7 +155,7 @@
                 <div class="columns large-4">
                     <div class="product-wrap">
                         <div class="product-img">
-                            <img src="img/tour.jpg" alt="">
+                            <a href="tour.html"><img src="img/tour.jpg" alt=""></a>
                         </div>
                         <div class="product-txt">
                             <div class="product-name">
